<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dateSliderTitle">Selected date</string>
    
      <string name="app_name">Android_Preferences_example</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
      <string name="faculty"><u><b>Faculty</b></u></string>
      <string name="acad"><u><b>Acad</b></u></string>  
     <string name="facdet"><u><b>Faculty Details</b></u></string>
      <string name="edule"><u><b>edule</b></u></string>
       <string name="acadcal"><u><b>Academic Calendar</b></u></string>
        <string name="examschedule"><u><b>Exam Schedule</b></u></string>
         <string name="detail"><u><b>Details</b></u></string>
    
</resources>
